fixed spacing

--- a/src/app/core/dashboard/deadline/deadline.component.scss
+++ b/src/app/core/dashboard/deadline/deadline.component.scss
@@ -3,7 +3,7 @@
 .deadline {
 	display: flex;
 	flex-direction: row;
-	margin: 2rem 0;
+	margin: 1rem 0;
 	padding: 1rem 0;
 	transition: all 0.2s ease-out;
 	border-radius: 1rem;
